--- a/sales-support.html
+++ b/sales-support.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -90,9 +92,9 @@
             
                     <div class="container clearfix">
                         <div class="logo-header">
-                            <div class="logo-header-inner logo-header-one">
+                           <div class="logo-header-inner logo-header-one">
                                 <a href="index.html">
-                                    <img style="height: 85px;" src="img/logo-main.png" alt="" />
+                                    <img style="height: 85px;" src="img/logo-white.png" alt="" />
                                 </a>
                             </div>
                         </div>
@@ -159,7 +161,7 @@
                                             <li><a href="sales-support.html">Sales Support</a></li>
                                             <li><a href="online-reputation-management.html">Online Reputation Management</a></li>
                                             <li><a href="hotel-audit.html">Hotel Audit</a></li>
-                                            <li><a href="coming-soon.html">Hotel Photography</a></li>
+                                            <li><a href="hotel-photography.html">Hotel Photography</a></li>
                                                                                         
                                         </ul>
                                     </li>
@@ -172,9 +174,9 @@
                                         <a href="our-team.html">Our Team</a>
                                     </li>                                                               
 
-                                    <li><a href="coming-soon.html">International Hotels</a></li>
-                                    <li><a href="coming-soon.html">Hotel Lease/Sell</a></li> 
-                                    <li><a href="coming-soon.html">Case Studies</a></li> 
+                                    <li><a href="international-hotels.html">International Hotels</a></li>
+                                    <li><a href="hotel-lease-sell.html">Hotel Lease/Sell</a></li> 
+                                    <li><a href="case-study.html">Case Studies</a></li> 
                                     <li><a href="contact-us.html">Contact Us</a></li> 
 
                                 </ul>
