--- a/website-development.html
+++ b/website-development.html
@@ -89,9 +89,9 @@
             
                     <div class="container clearfix">
                         <div class="logo-header">
-                            <div class="logo-header-inner logo-header-one">
+                           <div class="logo-header-inner logo-header-one">
                                 <a href="index.html">
-                                    <img style="height: 85px;" src="img/logo-main.png" alt="" />
+                                    <img style="height: 85px;" src="img/logo-white.png" alt="" />
                                 </a>
                             </div>
                         </div>
