--- a/about-us.html
+++ b/about-us.html
@@ -406,7 +406,7 @@
                                         <li>One stop solution.</li>
                                         <li>Excellent online portal relationship</li>
                                     </ul>
-                                    <a href="services-detail.html" class="site-button-secondry btn-half outline m-r15">Read More <span class="sx-bg-primary"></span></a>
+                                    <a href="contact-us.html" class="site-button-secondry btn-half outline m-r15">Enquire Now! <span class="sx-bg-primary"></span></a>
                                 </div>
 
                                 </div>
