--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -23,6 +23,8 @@
         Hospitality Minds | Social Media Marketing – Marketing for Hotels – Facebook marketing for Hotels – Instagram Marketing for Hotels – India – Business growth – Social Media Marketing Company
     </title>
     <meta name="description" content="Hotel Advisory: Are you looking for opening a hotel? Dial us now and get the highest quality advisory. Hospitality minds help you in understanding the market trends, business potential and cost of operations">
+
+     <link rel= "canonical" href="https://hospitalityminds.com/digital-marketing.html">
     
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
