--- a/revenue-management.html
+++ b/revenue-management.html
@@ -22,6 +22,8 @@
    <title>Hospitality Minds | leading Hotel Revenue management agency in India
     </title>
     <meta name="description" content="We are leading hotel revenue management agency in India , we cater all types of hotels across world, we have best hotel revenue management team to boost hotel sales .">
+
+     <link rel= "canonical" href="https://hospitalityminds.com/revenue-management.html">
     
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
